Major codebase refactoring: Modular architecture, error handling, and clean organization
✨ New Features:
- Modular architecture with dedicated core, config, and utility modules
- Comprehensive error handling with custom exception classes
- Centralized logging system with rotation and performance monitoring
- Configuration management with JSON file support
- Data validation utilities for ECG signals and metrics
- Clean file organization with clutter directory for unused files

🏗️ Architecture Improvements:
- Core modules: constants, exceptions, validation, logging
- Configuration system with runtime updates
- Proper Python package structure with __init__.py files
- Fallback mechanisms for graceful degradation
- Enhanced main.py with proper error handling

📁 File Organization:
- Moved unused files to clutter/ directory
- Cleaned up __pycache__ directories
- Updated .gitignore for better version control
- Comprehensive project structure documentation

🔧 Technical Enhancements:
- Input validation for ECG signals and metrics
- Range checking for heart rate, intervals, and axis values
- Signal quality assessment and sanitization
- Performance monitoring and logging
- Graceful error recovery mechanisms

📚 Documentation:
- Updated README.md with new architecture details
- Created PROJECT_STRUCTURE.md with comprehensive structure guide
- Enhanced technical documentation
- Clear module descriptions and benefits

This refactoring makes the codebase more maintainable, testable, and robust while preserving all existing functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,100 @@ wheels/
 *.egg
 MANIFEST
 
-# Virtual Environment
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# ECG Application specific
+*.log
+ecg_app.log
+*.tmp
+*.temp
+clutter/
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
@@ -44,22 +132,21 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Project specific
-clutter/
-*.log
+# Temporary files
 *.tmp
 *.temp
-users.json
+*.bak
+*.backup
 
-# PyInstaller
-*.spec
-# Build artifacts
-build/
-dist/
-*.pyc
-__pycache__/
+# Test files
+test_*.py
+*_test.py
+tests/
 
-# Generated files
-ecg_report.html
-lead_ii_live.json
-*.log
+# Documentation builds
+docs/build/
+docs/_build/
+
+# Configuration overrides
+local_config.json
+user_config.json
