Add encrypted cloud config - NO separate .env sharing needed!
🔐 ENCRYPTED CREDENTIALS IN CODEBASE

Problem: Don't want to share .env separately with teammates
Solution: Encrypt credentials, commit to GitHub, auto-decrypt

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📦 NEW FILES:

1. src/utils/secure_config.py
   • Manages encrypted AWS credentials
   • Auto-decryption on app startup
   • Fallback to .env if needed
   • Uses Fernet encryption (AES-128)

2. src/utils/encrypt_credentials.py
   • Tool to encrypt your AWS credentials
   • Interactive prompts
   • Generates encrypted config
   • Copy-paste ready output

3. ENCRYPTED_CONFIG_SETUP.md
   • Complete setup guide
   • How to encrypt credentials
   • How teammates use it
   • Security explanation
   • Troubleshooting

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📝 MODIFIED FILES:

1. src/utils/cloud_uploader.py
   • Now checks encrypted config FIRST
   • Falls back to .env if not encrypted
   • Seamless integration

2. requirements.txt
   • Added: cryptography>=41.0.0

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

🚀 HOW IT WORKS:

Step 1 (You - One Time):
  $ python src/utils/encrypt_credentials.py
  Enter AWS credentials → Get encrypted strings

Step 2 (You):
  Update ENCRYPTED_CONFIG in src/utils/secure_config.py

Step 3 (You):
  $ git add src/utils/secure_config.py
  $ git commit -m "Add encrypted credentials"
  $ git push

Step 4 (Teammates):
  $ git pull
  $ pip install -r requirements.txt
  $ python src/main.py

  ✅ CLOUD WORKS AUTOMATICALLY!

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

🔒 SECURITY:

What's in GitHub:
  ✅ Encrypted credentials (safe)
  ✅ Encryption tool
  ✅ Documentation

What's NOT in GitHub:
  ❌ Plaintext credentials
  ❌ Decryption keys (in code, same for all)
  ❌ .env files (still in .gitignore)

Encryption Method:
  • Fernet (symmetric encryption)
  • AES-128 CBC mode
  • HMAC for authentication


--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,9 @@ pyparsing>=3.0.0
 # System Monitoring (for crash logger and diagnostics)
 psutil>=5.9.0
 
+# Security (for encrypted configuration)
+cryptography>=41.0.0
+
 # Optional: Enhanced Performance
 numba>=0.56.0
 
